<resources>
    <string name="app_name">E-Delegue</string>
    <string name="textfield_label">email</string>
    <string name="name_app">E-delegue</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">mot de passe</string>
    <string name="etudiant">Etudiant</string>
    <string name="enseignant">Enseignant</string>
    <string name="connexion">Connexion</string>
    <string name="commencer_maintenant">commencer maintenant</string>
    <string name="logo">logo</string>
    <string name="inscription">Inscription</string>
    <string name="conf_hint_password">Confermer le mot de pass</string>
    <string name="username">Nom d\'utilisaeur</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="title_activity_professor_menu">ProfessorMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">E-Delegue</string>
    <string name="myposts">My Posts</string>
    <string name="message">Messages</string>
    <string name="Signout">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">My posts</string>
    <string name="messages">Messages</string>
    <string name="hellot">Welcome professor</string>
    <string name="hello">Welcome Professor</string>
    <string name="add_post">Ajouter un Post</string>
    <string name="hint_post_title">Le titre du Post</string>
    <string name="upload_btn">parcourir(fichier/image)</string>
    <string name="send_btn">publier</string>
</resources>
