<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.example.edelegue.ui.professor_fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_myposts"
        android:name="android.example.edelegue.ui.professor_fragments.PostsFragments"
        android:label="@string/posts"
        tools:layout="@layout/posts_fragments" />

    <!--<fragment
        android:id="@+id/nav_message"
        android:name="android.example.edelegue.ui.professor_fragments.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" />-->

    <activity
        android:id="@+id/nav_message"
        android:name="android.example.edelegue.ChatModule.MessageModel"
        android:label="@string/messages"
        tools:layout="@layout/activity_messages"/>


</navigation>