<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".posts_operations.Add_post">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        tools:context=".addpostfragment"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_post"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_post_title" />

            <EditText
                android:id="@+id/content_post"
                android:layout_width="fill_parent"
                android:layout_height="189dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="#F1E7E7"
                android:gravity="top"
                android:hint="Description du post"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textFilter|textVisiblePassword|textNoSuggestions"
                android:maxLength="200"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000">

            </EditText>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_file_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="upload"
                    android:text="@string/upload_btn" />

                <TextView
                    android:id="@+id/name_file"
                    android:layout_width="434dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/date_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_file_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:onClick="send"
                android:text="@string/send_btn" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>